--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,239 @@
 :root {
   /* Main site colors */
   --primary: white;
-  --secondary: rgb(255, 125, 50);
+  --secondary: #e9896a;
+  --blue: #343f56;
+  --green: #387c6d;
+  --alternate: #181818;
+  --light: #e6ecf8;
 }
 
-body {
+@media (min-width: 1000px) {
+  body {
+    font-family: "Rubik", sans-serif;
+    margin: 0;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  .navbar {
+    position: relative;
+    padding: 1.2rem 0;
+  }
+
+  .navbar-container {
+    display: flex;
+    min-height: 3.25rem;
+    margin: 0 3rem;
+    position: relative;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .nav-link {
+    margin: 0 1rem;
+    color: var(--secondary);
+  }
+
+  .nav-link:hover {
+    font-weight: bold;
+  }
+
+  .navbar {
+    font-size: 18pt;
+  }
+
+  .home {
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .intro {
+    padding-top: 2rem;
+  }
+
+  .intro h1 {
+    font-size: 3rem;
+    font-weight: bold;
+  }
+
+  .intro h2 {
+    font-size: 1.5rem;
+    font-weight: lighter;
+  }
+
+  .headshot {
+    width: 210px;
+    margin: 2rem 0;
+  }
+
+  .computer-container {
+    height: fit-content;
+  }
+
+  .computers {
+    margin-bottom: -0.25rem;
+  }
+
+  .about {
+    padding: 9rem 4.5rem;
+  }
+
+  .about h1 {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+
+  .about h2 {
+    font-weight: lighter;
+    font-size: 1.25rem;
+  }
+
+  .is-long {
+    padding-bottom: 16rem;
+  }
+
+  .skillset {
+    margin-top: -10rem;
+    padding: 5rem 1.5rem;
+  }
+
+  .skillset ul {
+    list-style: none;
+    padding-inline-start: 0;
+    margin: 0;
+  }
+
+  .skillset h1 {
+    font-size: 1.5rem;
+  }
+
+  .skillset h2,
+  .skillset p,
+  .skillset li {
+    font-size: 18px;
+    margin: 0;
+  }
+
+  .skillset li {
+    margin: 8px 0 !important;
+  }
+
+  .skillset h2 {
+    color: var(--secondary);
+    margin-top: 50px !important;
+    margin-bottom: 8px !important;
+  }
+
+  .skillset-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    background-color: var(--primary);
+    border-radius: 12px;
+    box-shadow: 0 5px 5px 0 rgb(233 240 243 / 50%), 0 0 0 1px var(--light);
+  }
+
+  .skill-icon {
+    width: 4rem;
+  }
+
+  .column {
+    padding: 75px 40px;
+  }
+
+  .column-left {
+    border-right: 1px solid var(--light);
+  }
+
+  .backend-development {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .frontend-development {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  footer {
+    background-color: var(--secondary);
+    padding: 4rem 1.5rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer-container {
+    width: 70%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .footer-copyright-container {
+    flex: 50%;
+  }
+
+  .footer-icon-container {
+    flex: 50%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .footer-icon {
+    width: 50px;
+    height: 50px;
+  }
+
+  #github-icon {
+    background: transparent center/cover url("../images/github.png") no-repeat;
+  }
+
+  #github-icon:hover {
+    background-image: url("../images/github-hover.png");
+  }
+
+  #linkedin-icon {
+    background: transparent center/cover url("../images/linkedin.png") no-repeat;
+  }
+
+  #linkedin-icon:hover {
+    background-image: url("../images/linkedin-hover.png");
+  }
+
+  #email-icon {
+    background: transparent center/cover url("../images/email.png") no-repeat;
+  }
+
+  #email-icon:hover {
+    background-image: url("../images/email-hover.png");
+  }
+
+  .is-three-fifths {
+    width: 60%;
+  }
+
+  .is-secondary {
+    background-color: var(--secondary);
+    color: var(--primary);
+  }
+
+  .centered-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .section {
+    padding: 0.75rem;
+  }
+
+  .has-centered-text {
+    text-align: center;
+  }
 }
