--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
 
   a {
     text-decoration: none;
+    color: var(--secondary);
   }
 
   .navbar {
@@ -35,7 +36,6 @@
 
   .nav-link {
     margin: 0 1rem;
-    color: var(--secondary);
   }
 
   .nav-link:hover {
@@ -46,7 +46,8 @@
     font-size: 18pt;
   }
 
-  .home {
+  .home,
+  .projects {
     align-items: stretch;
     display: flex;
     flex-direction: column;
@@ -159,6 +160,32 @@
   .frontend-development {
     grid-column: 2;
     grid-row: 1;
+  }
+
+  .project-container {
+    max-width: 890px;
+    padding: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .project-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+
+  .project-card {
+    position: relative;
+    margin: 20px;
+    min-width: 400px;
+    max-width: 400px;
+    flex: 50%;
+    background-color: var(--blue);
+    border-radius: 0.5em;
+    height: 401px;
+    transition: all 0.2s ease-in-out;
   }
 
   footer {
