Add hover animation to nav links

--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,16 @@
   body {
     font-family: "Rubik", sans-serif;
     margin: 0;
+    position: relative;
   }
 
   a {
     text-decoration: none;
     color: var(--secondary);
+  }
+
+  .content-wrap {
+    padding-bottom: 179px;
   }
 
   .navbar {
@@ -34,12 +39,31 @@
     justify-content: space-between;
   }
 
-  .nav-link {
+  .nav-link-container {
+    position: relative;
+    width: fit-content;
     margin: 0 1rem;
   }
 
   .nav-link:hover {
     font-weight: bolder;
+  }
+
+  .nav-link::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--secondary);
+    transform-origin: bottom left;
+    transition: transform 0.25s ease-out;
+    transform: scaleX(0);
+  }
+
+  .nav-link:hover::after {
+    transform: scaleX(1);
   }
 
   .navbar {
@@ -167,6 +191,7 @@
     padding: 1.5rem;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 3rem;
   }
 
   .project-card-container {
@@ -264,13 +289,17 @@
 
   footer {
     background-color: var(--secondary);
-    padding: 4rem 1.5rem;
+    padding: 4rem 0;
     display: flex;
     justify-content: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: fit-content;
   }
 
   .footer-container {
-    width: 70%;
+    width: 50%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -278,12 +307,12 @@
   }
 
   .footer-copyright-container {
-    flex: 70%;
+    flex: 60%;
     color: var(--alternate);
   }
 
   .footer-icon-container {
-    flex: 30%;
+    flex: 40%;
     display: flex;
     justify-content: space-evenly;
   }
