--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,11 +8,12 @@
   --light: #e6ecf8;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 0px) {
   body {
     font-family: "Rubik", sans-serif;
     margin: 0;
     position: relative;
+    min-width: 450px;
   }
 
   a {
@@ -27,6 +28,7 @@
   .navbar {
     position: relative;
     padding: 1.2rem 0;
+    border-bottom: 1px solid var(--light);
   }
 
   .navbar-container {
@@ -34,9 +36,9 @@
     min-height: 3.25rem;
     margin: 0 3rem;
     position: relative;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
   }
 
   .nav-link-container {
@@ -82,6 +84,10 @@
     padding-top: 2rem;
   }
 
+  .intro-headings {
+    margin: 0 5rem;
+  }
+
   .intro h1 {
     font-size: 3rem;
     font-weight: bold;
@@ -103,10 +109,15 @@
 
   .computers {
     margin-bottom: -0.25rem;
+    width: 100%;
   }
 
   .about {
-    padding: 9rem 4.5rem;
+    padding: 3rem 4.5rem;
+  }
+
+  .about-container {
+    padding: 0.75rem;
   }
 
   .about h1 {
@@ -120,7 +131,7 @@
   }
 
   .is-long {
-    padding-bottom: 16rem;
+    padding-bottom: 8rem;
   }
 
   .skillset {
@@ -186,8 +197,12 @@
     grid-row: 1;
   }
 
+  .projects {
+    margin: 0 4rem;
+  }
+
   .project-container {
-    max-width: 890px;
+    max-width: 80%;
     padding: 1.5rem;
     margin-left: auto;
     margin-right: auto;
@@ -196,9 +211,8 @@
 
   .project-card-container {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
   }
 
   .project-card {
@@ -299,7 +313,7 @@
   }
 
   .footer-container {
-    width: 50%;
+    width: 90%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -346,10 +360,6 @@
     background-image: url("../images/email-hover.png");
   }
 
-  .is-three-fifths {
-    width: 60%;
-  }
-
   .is-secondary {
     background-color: var(--secondary);
     color: var(--primary);
@@ -358,10 +368,6 @@
   .centered-container {
     display: flex;
     justify-content: center;
-  }
-
-  .section {
-    padding: 0.75rem;
   }
 
   .has-centered-text {
