--- a/css/mobile.css
+++ b/css/mobile.css
@@ -23,6 +23,9 @@
     max-width: 400px !important;
     height: 400px !important;
   }
+  .intro-headings {
+    margin: 0 5rem !important;
+  }
 }
 
 @media (min-width: 0px) {
@@ -102,7 +105,7 @@
   }
 
   .intro-headings {
-    margin: 0 5rem;
+    margin: 0 3rem;
   }
 
   .intro h1 {
